--- a/style.css
+++ b/style.css
@@ -124,6 +124,47 @@ h2.subtitle {
     color: inherit;
 }
 
+.speech-container{
+    padding-top: 35px;
+    margin-top: -30px;
+}
+
+.speech-title {
+    font-size: 20px;
+    margin-bottom: 0;
+}
+
+.speech-time {
+  font-size: 16px;
+  padding: 5px;
+  letter-spacing: -0.03em;
+  color: #fff;
+  background: #2b2b2b;
+  border-radius: 4px;
+}
+
+.speech-info *{
+    margin-left:58px;
+}
+
+.speech-description{
+    font-weight:normal;
+    text-align: justify;
+    display: block;
+}
+
+.speaker-name{
+    display:block;
+    font-size: 20px;
+    margin: 10px 0px 0px 58px;
+}
+
+.speaker-bio{
+    font-weight:normal;
+    text-align: justify;
+    display:block;
+}
+
 #eventick{
 	border: 1px solid #CCC;
 	border-radius: 4px;
