--- a/style.css
+++ b/style.css
@@ -125,13 +125,13 @@ h2.subtitle {
 }
 
 .speech-container{
-    padding-top: 35px;
+    padding-top: 60px;
     margin-top: -30px;
 }
 
 .speech-title {
     font-size: 20px;
-    margin-bottom: 0;
+    margin: 0px 0px 0px 58px;
 }
 
 .speech-time {
@@ -141,6 +141,8 @@ h2.subtitle {
   color: #fff;
   background: #2b2b2b;
   border-radius: 4px;
+  margin-bottom: 5px;
+  float:left;
 }
 
 .speech-info *{
