--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ header {
     background-repeat: no-repeat;
     background-size: auto 100%;
     background-position: right bottom;
+    box-shadow: 0px 0px 200px 500px rgba(0,0,0,0.2) inset;
 }
 
 .logo-name{
@@ -228,10 +229,22 @@ footer {
     position: relative;
     top: -1px;
 }
+
+div#imagens img{
+    margin-right: 10px;
+    margin-bottom: 10px;
+    height:200px;
+    width:auto;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.15);
+}
+
 .apoio-link, .partner-link {
     background: #fff;
     border: 1px solid #ccc;
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
 }
 a.apoio-logo.apoio-link:hover {
     box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 1.15);
