Fix proposal deadline.

--- a/style.css
+++ b/style.css
@@ -233,7 +233,9 @@ footer {
 div#imagens img{
     margin-right: 10px;
     margin-bottom: 10px;
-    height:200px;
+    max-height: 300px;
+    height: auto;
+    max-width: 100%;
     width:auto;
     border: 1px solid #ccc;
     border-radius: 4px;
