--- a/style.css
+++ b/style.css
@@ -217,17 +217,17 @@ footer {
     margin: 0 30px 30px 0;
 }
 .apoio-link, .partner-link {
-    display: block;
-    width: 150px;
+    display: table;
+    width: 200px;
     height: 150px;
     text-align: center;
     vertical-align: middle;
     line-height: 150px;
 }
 .photo {
-    max-width: 100%;
-    position: relative;
-    top: -1px;
+    display:table-cell;
+    max-width: 200px;
+    max-height: 150px;
 }
 
 div#imagens img{
@@ -247,6 +247,7 @@ div#imagens img{
     border: 1px solid #ccc;
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.15);
     border-radius: 4px;
+    padding: 3px;
 }
 a.apoio-logo.apoio-link:hover {
     box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 1.15);
