--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ header {
     letter-spacing: -0.04em;
 }
 
-.tagline, .logo-link, .logo-link:hover {
+.tagline, .logo-link, .logo-link:hover, .logo-link:visited, .logo-link:focus {
     color: #fff;
     text-shadow: 1px 2px 1px rgba(0, 0, 0, 0.3);
     text-decoration: none;
@@ -120,7 +120,10 @@ h2.subtitle {
     text-align:center;
 }
 
-.schedule-tbl a, a:hover, a:active, a:focus {
+.schedule-tbl a:not(.presentation),
+.schedule-tbl a:not(.presentation):hover,
+.schedule-tbl a:not(.presentation):active,
+.schedule-tbl a:not(.presentation):focus {
     color: inherit;
 }
 
