--- a/style.css
+++ b/style.css
@@ -255,3 +255,13 @@ div#imagens img{
 a.apoio-logo.apoio-link:hover {
     box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 1.15);
 }
+
+.individual-link{
+    border: 1px solid #E7E7E7;
+    border-radius: 3px;
+    padding: 15px;
+}
+
+#edicoes{
+    padding-bottom: 50px;
+}
