--- a/style.css
+++ b/style.css
@@ -257,9 +257,10 @@ a.apoio-logo.apoio-link:hover {
 }
 
 .individual-link{
-    border: 1px solid #E7E7E7;
-    border-radius: 3px;
     padding: 15px;
+    border: 1px solid #CCC;
+    border-radius: 4px;
+    box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.15);
 }
 
 #edicoes{
